<resources>
    <string name="app_name">Parchados</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="parchados">Parchados</string>
    <string name="logo">logo</string>

    <string name="perfil">Perfil</string>
    <string name="favoritos">Mis Favoritos</string>
    <string name="cuenta">Cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="enviar">Enviar</string>
    <string name="obligatorio">*Campo Obligatorio</string>
    <string name="registra_tu_evento">Registra tu evento</string>
    <string name="t_tulo">*Título</string>
    <string name="descripci_n">*Descripción</string>
    <string name="categor_a">*Categoría</string>
    <string name="direcci_n">*Dirección</string>
    <string name="precio">*Precio</string>
    <string name="tel_fono">*Teléfono</string>
    <string name="horario">*Horario</string>
    <string name="minutos">*Minutos</string>
    <string name="horas">*Horas</string>

    <string-array name="categorias">
        <item>Deportes</item>
        <item>Comida</item>
        <item>Entretenimiento</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="user_name">Nombre del Usuario</string>
    <string name="user_profile_image">User profile image</string>
    <string name="imagen_del_perfil">Imagen del perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="pepito_perez">Pepito Perez</string>
    <string name="usuario">Usuario:</string>
    <string name="elpepitop">elpepitop</string>
    <string name="correo">Correo:</string>
    <string name="pepito_gmail_com">pepito@gmail.com</string>
    <string name="tel_345_7891239">345 7891239</string>
    <string name="edad">Edad:</string>
    <string name="edad_21">21</string>
    <string name="g_nero">Género:</string>
    <string name="gender_h">H</string>
    <string name="cerrar">Cerrar</string>
    <string name="button_Text">Iniciar Sesion</string>
    <string name="user">Usuario</string>
    <string name="no_login">¿No tienes cuenta?\nRegistrate</string>
    <string name="if_reg">¿Ya tienes cuenta? Inicia sesion</string>
    <string name="first_text">INICIA</string>
    <string name="second_text">SESIÓN</string>
    <string name="description">Imagen</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_email">Correo</string>
    <string name="button_text_registro">Registrarse</string>
    <string name="restablecer_title">Restablecer Contraseña</string>
    <string name="correo_restablecer">Escribe un correo</string>
    <string name="btn_restablecer">Restablecer</string>
    <string name="ver_perfil">Ver Perfil</string>

    <string-array name="localidades">
        <item>Antonio Nariño</item>
        <item>Barrios Unidos</item>
        <item>Bosa</item>
        <item>Candelaria</item>
        <item>Chapinero</item>
        <item>Ciudad Bolívar</item>
        <item>Engativá</item>
        <item>Fontibón</item>
        <item>Kennedy</item>
        <item>Los Mártires</item>
        <item>Puente Aranda</item>
        <item>Rafael Uribe Uribe</item>
        <item>San Cristóbal</item>
        <item>Santa Fe</item>
        <item>Suba</item>
        <item>Sumapaz</item>
        <item>Teusaquillo</item>
        <item>Tunjuelito</item>
        <item>Usaquén</item>
        <item>Usme</item>
    </string-array>

    <string name="entrada">Inicio</string>
    <string name="salida">Final</string>
    <string name="imagen_seleccionada">Imagen seleccionada</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="instagram">Instagram</string>
    <string name="tiktok">TikTok</string>
    <string name="otro_link">Otra URL</string>
    <string name="eliminar_imagen">Eliminar imagen</string>
    <string name="localidad">*Localidad</string>
    <string name="portada">Portada</string>
    <string name="coordenadas">*Coordenadas (Ej: 40.02,-23.2)</string>
    <string name="direcci_nT">*Dirección</string>
    <string name="imagen_del_evento">Imagen del evento</string>
    <string name="icono_de_categoria_del_evento">Icono de categoria del evento</string>
    <string name="bot_n_para_opciones_de_mapa">Botón para opciones de mapa</string>
    <string name="ir_al_evento">Ir al evento</string>

    <string name="category_filter">categoria</string>

    <string name="categoria">Categoría</string>
    <string name="localidad2">Localidad</string>
    <string name="filtrar_por">Filtrar por:</string>
    <string name="comida">Comida</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="deportes">Deportes</string>
    <string name="todos">Todos</string>
    <string name="filtro_categor_as">Filtro - Categorías:</string>
    <string name="filtro_localidades">Filtro - Localidades</string>
    <string name="mis_eventos">Mis eventos</string>

    <string name="MAPS_KEY">AIzaSyANfNEPGlmNfy8b7Mef8vvsTAXQh2KrlUs</string>
    <string name="registrate">Registrate</string>
    <string name="regresar_al_men">Regresar al menú</string>
    <string name="delete_event">Borrar evento</string>

</resources>