<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Creado para menú principal -->
    <group>
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/favoritos"/>
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/abc_vector_test"
        android:title="@string/formulario_inscripci_n"/>
    </group>

    <item android:title="@string/cuenta">
    <menu>
        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/perfil"/> Ț
        <item android:id="@+id/nav_item_four"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/cerrar_sesi_n"/>

    </menu>
</item>
</menu>