<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormsActivity">

    <!-- Toolbar como encabezado -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/degrade_2"
        app:title="@string/registra_tu_evento"
        app:titleTextColor="@color/degrade_1"
        tools:ignore="MissingConstraints" />

    <!-- Contenido del formulario aquí -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:focusableInTouchMode="true">

            <!-- Primer campo: Título del evento -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/t_tulo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/degrade_2"
                app:hintTextColor="@color/degrade_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Segundo campo: Descripción -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripci_n"
                app:layout_constraintTop_toBottomOf="@id/event_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:counterMaxLength="250"
                app:counterTextColor="@color/degrade_2"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/degrade_2"
                app:hintTextColor="@color/degrade_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:scrollHorizontally="false"
                    android:gravity="top|start"
                    android:overScrollMode="always"
                    android:scrollbars="vertical"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tercer campo: Ubicación -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direcci_n"
                app:layout_constraintTop_toBottomOf="@id/event_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/degrade_2"
                app:hintTextColor="@color/degrade_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Cuarto campo: Teléfono del organizador/sitio -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel_fono"
                app:layout_constraintTop_toTopOf="@id/event_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/degrade_2"
                app:hintTextColor="@color/degrade_2"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:counterTextColor="@color/degrade_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone|number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- LinearLayout horizontal para Precio y categoría -->
            <LinearLayout
                android:id="@+id/event_category_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/event_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <!-- Quinto campo: Categoría del evento -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:hint="@string/categor_a"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:boxStrokeColor="@color/degrade_2"
                    app:hintTextColor="@color/degrade_2">

                    <AutoCompleteTextView
                        android:id="@+id/category_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:simpleItems="@array/categorias"
                        android:inputType="none"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>
                <!-- Quinto campo: Categoría del evento -->

                <!-- Sexto campo: Precio del evento -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:hint="@string/precio"
                    app:prefixText="$"
                    app:prefixTextColor="@color/degrade_2"
                    app:endIconMode="clear_text"
                    app:boxStrokeColor="@color/degrade_2"
                    app:hintTextColor="@color/degrade_2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- LinearLayout horizontal para Horas y Minutos -->
            <LinearLayout
                android:id="@+id/event_hours_minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/event_category_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/schedule_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horario"
                    android:textSize="16sp"/>

                <!-- Campo para las horas (0-23) -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_hours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:hint="@string/horas"
                    app:boxStrokeColor="@color/degrade_2"
                    app:hintTextColor="@color/degrade_2"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hours_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="2"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Campo para los minutos (0-59) -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/event_minutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/minutos"
                    app:boxStrokeColor="@color/degrade_2"
                    app:hintTextColor="@color/degrade_2"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minutes_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="2"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                app:layout_constraintTop_toBottomOf="@id/event_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
